# KronUI

./: .gitignore  readme.md
html/: Drawing_8hpp.html  Drawing_8hpp__incl.map  Drawing_8hpp__incl.md5  Drawing_8hpp_source.html  GeometryRenderer_8cpp.html  GeometryRenderer_8cpp__incl.map  GeometryRenderer_8cpp__incl.md5  GeometryRenderer_8hpp.html  GeometryRenderer_8hpp__incl.map  GeometryRenderer_8hpp__incl.md5  GeometryRenderer_8hpp_source.html  KronUIGL_8hpp.html  KronUIGL_8hpp__incl.map  KronUIGL_8hpp__incl.md5  KronUIGL_8hpp_source.html  Paints_8hpp.html  Paints_8hpp__dep__incl.map  Paints_8hpp__dep__incl.md5  ReflectiveItem_8hpp.html  ReflectiveItem_8hpp__dep__incl.map  ReflectiveItem_8hpp__dep__incl.md5  RotationPaintShader_8cpp.html  RotationPaintShader_8cpp__incl.map  RotationPaintShader_8cpp__incl.md5  RotationPaintShader_8hpp.html  RotationPaintShader_8hpp__dep__incl.map  RotationPaintShader_8hpp__dep__incl.md5  RotationPaintShader_8hpp__incl.map  RotationPaintShader_8hpp__incl.md5  RotationPaintShader_8hpp_source.html  Shader_8hpp.html  Shader_8hpp__dep__incl.map  Shader_8hpp__dep__incl.md5  Shader_8hpp__incl.map  Shader_8hpp__incl.md5  Shader_8hpp_source.html  Shapes_8cpp.html  Shapes_8cpp__incl.map  Shapes_8cpp__incl.md5  Shapes_8hpp.html  (+72 more)
include/: logger.hpp
latex/: Drawing_8hpp.tex  Drawing_8hpp__incl.md5  GeometryRenderer_8cpp.tex  GeometryRenderer_8hpp.tex  (+63 more)
src/KronUIGL/3D/: CMakeLists.txt  Makefile  camera.cpp  camera.hpp  cmake_install.cmake  entity.hpp  modelEntity.cpp  modelEntity.hpp
src/KronUIGL/3D/Elements/: CMakeLists.txt  entity.hpp  mesh.cpp  mesh.hpp  texture.hpp  transform.cpp  transform.hpp  vertex.hpp  world.hpp
src/KronUIGL/3D/Loaders/: OBJLoader.cpp  OBJLoader.hpp
src/KronUIGL/3D/Renderers/: MeshRenderer.cpp  MeshRenderer.hpp
src/KronUIGL/3D/Surfaces/: CMakeLists.txt  DrawSurface.cpp  DrawSurface.hpp  VideoFrame.hpp
src/KronUIGL/3D/Vision/: camera.cpp  camera.hpp
(+142 files in other folders)
